<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadina"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="284dp"
        android:layout_height="105dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Version 1.1.4. 29.10.2023." />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="239dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/login"
        android:inputType="text"
        android:hint="@string/username" />


    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:password="true"

        />


    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prikazi lozinku" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:hint="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_notregister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:hint="@string/not_registered"
            android:textColor="#04ea00"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:hint="@string/register"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:visibility="invisible" />

    </LinearLayout>


</LinearLayout>


