<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6"
    android:background="@drawable/pozadina"
    android:orientation="vertical">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TableLayout
                android:id="@+id/simpleTableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:stretchColumns="1">

                <EditText
                    android:id="@+id/bar_kod_komisiono"
                    android:layout_width="333dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:autofillHints="Skeniraj bar kod"
                    android:background="#fff"
                    android:focusable="true"

                    android:focusableInTouchMode="true"
                    android:hint="@string/skeniraj_na_klik_komisiono_mesto"
                    android:minHeight="48dp"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TableRow
                    android:id="@+id/firstRow1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Skenirani artikli"
                        android:visibility="invisible" />



                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="100dp"
                        android:layout_marginLeft="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Prikazi tastaturu "
                        android:visibility="visible" />



                </TableRow>

                <TableRow

                    android:id="@+id/firstRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:text="Slika"
                        android:textColor="#2B2626"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_peak"
                        android:layout_width="260dp"
                        android:layout_height="125dp"
                        android:layout_marginTop="1dp"

                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/peak" />

                </TableRow>

                <TableRow
                    android:id="@+id/firstRow2"
                    android:layout_width="fill_parent"
                    android:layout_height="71dp">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="39dp"
                        android:layout_column="0"


                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:text="Sifra artikla"
                        android:textColor="#2B2626"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/sf_art"
                        android:layout_height="33dp"
                        android:layout_column="1"
                        android:layout_marginLeft="-5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#8BFF9800"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="Sifra artikla  "
                        android:importantForAutofill="no"
                        android:textColor="#000"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck" />
                </TableRow>


                <TableRow
                    android:id="@+id/firstRow3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="42dp"
                        android:layout_height="36dp"
                        android:layout_column="0"
                        android:layout_marginLeft="5dp"


                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:text="Naziv artikla"
                        android:textColor="#2B2626"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/naziv_art"
                        android:layout_height="92dp"
                        android:layout_column="1"
                        android:layout_marginLeft="-5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#8BFF9800"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="Naziv artikla  "
                        android:minHeight="48dp"
                        android:padding="5dp"
                        android:textColor="#000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/firstRow4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="42dp"
                        android:layout_height="36dp"
                        android:layout_column="0"
                        android:layout_marginLeft="5dp"


                        android:layout_marginTop="5dp"
                        android:layout_marginRight="20dp"
                        android:text="Stanje robe"
                        android:textColor="#2B2626"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/kms_art"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginLeft="-5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="Stanje robe..."

                        android:minHeight="48dp"
                        android:padding="5dp"
                        android:textColor="#830E0E"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </TableRow>



                <TableRow
                    android:id="@+id/firstRow5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:digits="1234567890"
                        android:inputType="phone"
                        android:text="Kolicina"
                        android:textColor="#2B2626"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/kolicina"
                        android:layout_width="256dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:hint="Kolicina koja je nadjena "
                        android:minHeight="48dp"
                        android:padding="5dp"
                        android:textColor="#000"
                        android:textSize="18sp" />
                </TableRow>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="71dp"

                    >

                    <Button
                        android:id="@+id/save"
                        android:layout_width="138dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/sacuvaj"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/ponisti"
                        android:layout_width="155dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="230dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="-2dp"

                        android:text="@string/ponisti"
                        android:textSize="20sp" />
                </RelativeLayout>


            </TableLayout>
        </ScrollView>
    </HorizontalScrollView>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/checkbox"
        android:visibility="invisible" />



</LinearLayout>







